// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All plan states 1`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-danger"
    >
      UNDEFINED
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`All plan states 2`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-dark"
    >
      START_STATE
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`All plan states 3`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-dark"
    >
      INITIALIZED
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`All plan states 4`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-primary"
    >
      STARTED
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`All plan states 5`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-success"
    >
      COMPLETED
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`All plan states 6`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-danger"
    >
      CANCELED
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`All plan states 7`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-danger"
    >
      FAILED
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`When system actors are loaded 1`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    Admin User
  </td>
  <td>
    <div
      className="badge badge-dark"
    >
      START_STATE
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;

exports[`When system actors are not loaded 1`] = `
<tr
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <td>
    42
  </td>
  <td>
    RFP plan
  </td>
  <td>
    UserID: 4
  </td>
  <td>
    <div
      className="badge badge-dark"
    >
      START_STATE
    </div>
  </td>
  <td>
    <Connect(RfpReportDownloadCell)
      planId={42}
      reportDefinitions={Array []}
      userId={42}
    />
  </td>
</tr>
`;
